--- a/style.css
+++ b/style.css
@@ -47,7 +47,6 @@ a {
     position: relative;
     height: 455px;
     z-index: 0;
-    /*padding: 20px 0px 128px 0px; */
     margin-bottom: 60px;
 }
 
@@ -65,7 +64,7 @@ a {
     background-color: rgba(0, 0, 0, 0.6);
 }
 
-.wrapper {
+.header-wrapper {
     width: 100%;
     margin-left: auto;
     margin-right: auto;
@@ -220,7 +219,6 @@ color: #b59f5b;
 
  .trend1 {
     background-image: url("./images/trend1.jpg");
-    /*max-width: 100%; */
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
@@ -808,7 +806,7 @@ color: #b59f5b;
   
   .socials-link-dribble {
       background-image: url("./svg/001-dribbble.svg");
-    background-color: #f4f7f6;
+      background-color: #f4f7f6;
      }
 
 .socials-link-pinterest {
@@ -854,6 +852,9 @@ color: #b59f5b;
 /*===Медиа===*/
 /*===769-1199 портрет 2 карточки===*/
 @media (min-width: 769px) and (max-width: 1199px) and (orientation: portrait) {
+    .header {
+        background-image: url("./images/banner-bg-tablet.jpg");
+    }
         .trend  {
         display: flex;
         flex-wrap: wrap;
@@ -871,6 +872,9 @@ color: #b59f5b;
 
 /*===769-1199 пейзаж 4 карточки===*/
 @media (min-width: 769px) and (max-width: 1199px) and (orientation: landscape) {
+    .header {
+        background-image: url("./images/banner-bg-tablet.jpg");
+    }
     .trend  {
         display: flex;
         flex-wrap: nowrap;
@@ -888,6 +892,9 @@ color: #b59f5b;
 
 /*===641-768 портрет 2 карточки===*/
 @media (min-width: 641px) and (max-width: 768px) and (orientation: portrait) {
+    .header {
+        background-image: url("./images/banner-bg-tablet.jpg");
+    }
     .trend  {
         display: flex;
         flex-wrap: wrap;
@@ -905,6 +912,10 @@ color: #b59f5b;
 
 /*===641-768 пейзаж 4 карточки===*/
 @media (min-width: 641px) and (max-width: 768px) and (orientation: landscape) {
+    .header {
+        background-image: url("./images/banner-bg-tablet.jpg");
+    }
+
     .trend  {
         display: flex;
         flex-wrap: nowrap;
@@ -923,6 +934,9 @@ color: #b59f5b;
 
 /*===361-640 портрет 1 карточка===*/
 @media (min-width: 361px) and (max-width: 640px) and (orientation: portrait) {
+    .header {
+        background-image: url("./images/banner-mobile.jpg");
+          }
      .trend  {
         display: flex;
         flex-wrap: wrap;
@@ -933,8 +947,58 @@ color: #b59f5b;
     }
 }
 
-/*===361-640 пейзаж 2 карточки===*/
+/*===361-640 портрет 1 карточка===*/
 @media (min-width: 361px) and (max-width: 640px) and (orientation: landscape) {
+    .header {
+        background-image: url("./images/banner-mobile.jpg");
+    }
+
+    .header_burger {
+        display: block;
+    }
+
+    .header-wrapper {
+        padding-bottom: 0;
+    }
+    .menu-list {
+        display: none;
+    }
+
+    .header_burger {
+        margin: -18px 10px 0 0;
+    }
+
+    .trend  {
+        display: flex;
+        flex-wrap: wrap;
+    }
+
+    .trend-card {
+        width: 100%;
+    }
+}
+/*===640 пейзаж 2 карточки===*/
+@media (min-width: 361px) and (max-width: 640px) and (orientation: landscape) {
+    .header {
+        background-image: url("./images/banner-mobile.jpg");
+    }
+
+    .header_burger {
+        display: block;
+    }
+
+    .header-wrapper {
+        padding-bottom: 0;
+    }
+
+    .menu-list {
+        display: none;
+    }
+
+    .header_burger {
+        margin: -18px 10px 0 0;
+    }
+
       .trend  {
         display: flex;
         flex-wrap: wrap;
@@ -947,6 +1011,25 @@ color: #b59f5b;
 
 /*===до 360 портрет 1 карточка===*/
 @media (max-width: 360px) {
+    .header {
+        background-image: url("./images/banner-mobile.jpg");
+    }
+    .header_burger {
+        display: block;
+    }
+
+    .header-wrapper {
+        padding-bottom: 0;
+    }
+
+    .menu-list {
+        display: none;
+    }
+
+    .header_burger {
+        margin: -18px 10px 0 0;
+    }
+
   .trend {
         display: flex;
         flex-wrap: wrap;
@@ -959,6 +1042,26 @@ color: #b59f5b;
 
 /*===до 360 пейзаж 2 карточки===*/
 @media (max-width: 360px) {
+    .header {
+        background-image: url("./images/banner-mobile.jpg");
+    }
+
+    .header_burger {
+        display: block;
+             }
+
+    .header-wrapper {
+        padding-bottom: 0;
+    }
+
+    .menu-list {
+        display: none;
+    }
+
+    .header_burger {
+        margin: -18px 10px 0 0;
+    }
+
      .trend {
         display: flex;
         flex-wrap: nowrap;
@@ -973,11 +1076,13 @@ color: #b59f5b;
 @media (max-width: 1199px) {
     .header-burger {
         position: relative;
-        display: block;
-        font-size: 12px;
-        width: 40px;
+         display: block;
+         width: 40px;
         height: 35px;
         z-index: 10;
+        top: 0px;
+        margin-left: auto;
+        margin-right: 40px;
         }
 
     /*===Это 3 черточки меню===*/
@@ -1038,38 +1143,7 @@ color: #b59f5b;
     }
 }
 
-/*===Прячем меню бургер===*/
-*@media (min-width: 1200px) {
-    .burger-hidden .burger-list .burger-list-item {
-        position: absolute;
-        width: 1px;
-        height: 1px;
-        margin: -1px;
-        padding: 0;
-        border: 0;
-        clip: rect(0 0 0 0);
-        overflow: hidden;
-    }
-}
-
-   /* .header-burger {
-        display: none;
-           }
-    .burger-menu {
-        display: none;
-    }
-    .burger-list {
-        display: none;
-    }
-    .burger-list-item {
-        display: none;
-    }
-        .burger-link  {
-            display: none;
-        }
-} */
-
-/*===PopUp===*/
+ /*===PopUp===*/
 .popup {
   position: fixed;
   width: 100%;
@@ -1147,8 +1221,8 @@ color: #b59f5b;
     color: #000;
 }
 
- /***Вы подписаны на email рассылку***/
-  .form-radio-wrap {
+/***Вы подписаны на email рассылку***/
+   .form-radio-wrap {
     display: flex;
     margin: 10px 0 0 0;
   }
@@ -1184,7 +1258,7 @@ color: #b59f5b;
     background-size: 20px;
   }
 
-  .item-radio:checked~.form_radio_text:before {
+  .item-radio:checked~.form-radio-text:before {
     background-image: url("./svg/form-circle.svg");
     transition: ease 0.9s;
   }
@@ -1247,7 +1321,7 @@ color: #b59f5b;
      border: 0;
      clip: rect(0 0 0 0);
      overflow: hidden;
- }
+ } 
 
 
 
